<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/pass"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/cfpass"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/phone"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/username"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:textColorHint="@color/colorAccent"
            android:layout_marginBottom="10dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylebutton"
            android:text="@string/dangki"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylebutton1"
            android:text="@string/gg"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>