<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginLeft="4dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/edittext_hint"
        android:textColor="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginLeft="4dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:hint="************"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:textColorHint="@color/colorAccent"/>

        <Button
            android:id="@+id/btnDangnhap"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylebutton"
            android:text="@string/dangnhap"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btnDangki"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/stylebutton"
            android:text="@string/dangki"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quenmatkhau"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>



    </LinearLayout>

</LinearLayout>